[package]
name = "orml-tokens"
description = "Fungible tokens module that implements `MultiCurrency` trait."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/tokens"
license = "Apache-2.0"
version = "0.3.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }

sp-runtime = { version = "2.0.0", default-features = false , git="https://github.com/mateuszaaa/substrate", rev="39d5c1bbe2eee21b4153f1bb309feff5535417e2"}
sp-io = { version = "2.0.0", default-features = false , git="https://github.com/mateuszaaa/substrate", rev="39d5c1bbe2eee21b4153f1bb309feff5535417e2"}
sp-std = { version = "2.0.0", default-features = false , git="https://github.com/mateuszaaa/substrate", rev="39d5c1bbe2eee21b4153f1bb309feff5535417e2"}
frame-support = { version = "2.0.0", default-features = false , git="https://github.com/mateuszaaa/substrate", rev="39d5c1bbe2eee21b4153f1bb309feff5535417e2"}
frame-system = { version = "2.0.0", default-features = false , git="https://github.com/mateuszaaa/substrate", rev="39d5c1bbe2eee21b4153f1bb309feff5535417e2"}

orml-traits = { path = "../traits", version = "0.3.1", default-features = false }
mangata-primitives = { git = 'https://github.com/mangata-finance/mangata-node', default-features = false, version = '0.1.0', rev = "f3ecab" }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }
pallet-treasury = { version = "2.0.0" }
pallet-elections-phragmen = { version = "2.0.0" }

clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
]
